fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ h1 {
 
 #calculator {
     display: flex;
+    justify-content: center;
 }
 
 #addition,
